2011-10-03  Anders Carlsson  <andersca@apple.com>

        Remove custom scrollbar painting hooks
        https://bugs.webkit.org/show_bug.cgi?id=69163

        Reviewed by Alexey Proskuryakov.

        * src/WebSettingsImpl.cpp:
        (WebKit::WebSettingsImpl::setShouldPaintCustomScrollbars):

2011-10-03  Elliot Poger  <epoger@google.com>

        webkit->chromium DEPS roll 103471->103694
        https://bugs.webkit.org/show_bug.cgi?id=69271

        This brings in a new tools/win/supalink directory from
        http://src.chromium.org/viewvc/chrome?view=rev&revision=103474

        Reviewed by Adam Barth.

        * DEPS:

2011-10-03  James Robinson  <jamesr@chromium.org>

        [chromium] Add WebWidget API for accessing the current WebCompositor
        https://bugs.webkit.org/show_bug.cgi?id=69181

        Reviewed by Darin Fisher.

        Add new WebWidgetClient::did(Activate|Deactivate)Compositor calls intended to replace
        didActivateAccleratedCompositing(bool) so that the enable call can be parameterized.

        Add a WebCompositor identifier parameter to didEnableAcceleratedCompositing that can be used on the compositor
        thread to get access to a WebCompositor pointer.

        * public/WebWidget.h:
        (WebKit::WebWidget::compositor):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::compositor):
        (WebKit::WebViewImpl::setIsAcceleratedCompositingActive):
        * src/WebViewImpl.h:

2011-10-03  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r96481.
        http://trac.webkit.org/changeset/96481
        https://bugs.webkit.org/show_bug.cgi?id=69251

        Breaks webkit_unit_tests on Linux(dbg) (Requested by hwennborg
        on #webkit).

        * WebKit.gypi:
        * public/WebCompositor.h:
        * public/WebWidgetClient.h:
        * src/WebCompositorImpl.cpp:
        (WebKit::WebCompositorImpl::WebCompositorImpl):
        (WebKit::WebCompositorImpl::~WebCompositorImpl):