@@ -32,7 +32,15 @@ class WebCompositorClient {
 public:
     // Callbacks invoked from the compositor thread.
     virtual void willShutdown() = 0;
-    virtual void didHandleInputEvent(bool processed) = 0;
+
+    // Exactly one of the following two callbacks will be invoked after every call to WebCompositor::handleInputEvent():
+
+    // Called when the WebCompositor handled the input event and no further processing is required.
+    virtual void didHandleInputEvent() = 0;
+
+    // Called when the WebCompositor did not handle the input event. If sendToWidget is true, the input event
+    // should be forwarded to the WebWidget associated with this compositor for further processing.
+    virtual void didNotHandleInputEvent(bool sendToWidget) = 0;
 
 protected:
     virtual ~WebCompositorClient() { }
